# ChangeLog for app-misc/lcdproc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lcdproc/ChangeLog,v 1.67 2009/06/13 10:38:47 rbu Exp $

  13 Jun 2009; Robert Buchholz <rbu@gentoo.org> -lcdproc-0.5.1-r4.ebuild,
  lcdproc-0.5.2-r1.ebuild, lcdproc-0.5.2-r2.ebuild,
  lcdproc-0.5.3_pre1.ebuild:
  Add --skip-validation to xmlto for bug 273214, will be fixed upstream in
  0.5.3, clean up old ebuild.

*lcdproc-0.5.3_pre1 (08 Jun 2009)

  08 Jun 2009; Robert Buchholz <rbu@gentoo.org> metadata.xml,
  lcdproc-0.5.1-r4.ebuild, +lcdproc-0.5.3_pre1.ebuild:
  Version bump, add i2500vfd, irtrans, lis and shuttlevfd drivers.

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  lcdproc-0.5.1-r4.ebuild, lcdproc-0.5.2-r1.ebuild, lcdproc-0.5.2-r2.ebuild:
  Migration to virtual/libusb. Verified by code inspection. Some of the lcd
  types have some potentially question USB usage code, but I suspect that
  they may have been broken already in that case, and this change does not
  make anything worse.

*lcdproc-0.5.2-r2 (12 Sep 2008)

  12 Sep 2008; Robert Buchholz <rbu@gentoo.org>
  +files/0.5.2-r2-lcdproc.initd, lcdproc-0.5.1-r4.ebuild,
  lcdproc-0.5.2-r1.ebuild, +lcdproc-0.5.2-r2.ebuild:
  Add imonlcd to support Antec iMON LCD modules (bug #232328), lcdproc init
  script should start after ntp-client (bug #234084), fix quoting.

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  14 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  lcdproc-0.5.2-r1.ebuild:
  ppc stable, bug #188210

  14 Aug 2007; Markus Rothe <corsair@gentoo.org> lcdproc-0.5.2-r1.ebuild:
  Stable on ppc64; bug #188210

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> lcdproc-0.5.2-r1.ebuild:
  Stable on x86, bug #188210.

  10 Aug 2007; Steve Dibb <beandog@gentoo.org> lcdproc-0.5.2-r1.ebuild:
  amd64 stable, bug 188210
